[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/enemies/demon/Demon_Death.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/demon/Demon_Idle.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/demon/Demon_Attack.png" type="Texture" id=3]
[ext_resource path="res://scenes/player_detection_zone.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/demon.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 80, 48 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 7.38466, 10 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 8.875, 5.125 )

[node name="Demon" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -19 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -24 )
frames = SubResource( 2 )
animation = "Idle"
frame = 3

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 21.0969, -22.25 )
scale = Vector2( 1.20562, 0.875587 )
shape = SubResource( 24 )

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
modulate = Color( 0.94902, 0.341176, 0.0431373, 1 )
position = Vector2( 21.125, -21.875 )
shape = SubResource( 25 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.329412 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]

[editable path="PlayerDetectionZone"]
